feat: some new fonts

--- a/src/_includes/partials/components/article-list.njk
+++ b/src/_includes/partials/components/article-list.njk
@@ -6,7 +6,7 @@
 		<ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
 			{% for item in postListItems %}
 				<li class="post-list__item">
-					<h3 class="font-base leading-tight text-600 md:text-700">
+					<h3 class="[ leading-tight text-600 md:text-700 ]">
 						<a href="{{ item.url }}" class="post-list__link link-hover" rel="bookmark">{{ item.data.title }}</a>
 					</h3>
 					<p class="gap-top-300">
