--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -5,7 +5,7 @@
 
 		> p:first-of-type:not(.post-note) {
 			font-size: get-size(600);
-			font-weight: 500;
+			font-weight: 600;
 		}
 
 		/**
@@ -25,7 +25,7 @@
 		a:not([class]) {
 			@include apply-utility('leading', 'tight');
 			text-decoration-thickness: 2px;
-			transition: color .35s ease;
+			transition: color 0.35s ease;
 		}
 
 		code,
@@ -33,7 +33,7 @@
 			background-color: var(--color-intro-bg);
 			border-radius: 3px;
 			color: var(--color-text);
-			padding: .2rem .5rem;
+			padding: 0.2rem 0.5rem;
 		}
 
 		pre > code {
@@ -43,7 +43,7 @@
 
 		blockquote {
 			background-color: var(--color-intro-bg);
-			border-left: .4rem solid var(--color-link-text);
+			border-left: 0.4rem solid var(--color-link-text);
 			border-radius: 10px;
 			color: var(--color-text);
 			font-size: get-size(600);
@@ -52,7 +52,7 @@
 			width: 100%;
 
 			p {
-				opacity: .85;
+				opacity: 0.85;
 				padding: get-size(500) 0;
 			}
 		}
@@ -84,12 +84,14 @@
 			margin-left: 50%; /* changing this value to 47% removes the horizontal scrollbar once the viewport is < 930px */
 			max-width: map-get($metrics, 'wrap-max-width');
 			position: relative;
-			transform: translateX(-50%); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
+			transform: translateX(
+				-50%
+			); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
 			width: 100vw;
 		}
 
 		figure img .video-player {
-			box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
+			box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
 		}
 
 		figure img {
@@ -98,19 +100,21 @@
 		}
 
 		figcaption {
-			font-size: .8em;
+			font-size: 0.8em;
 			font-style: italic;
-			margin: .5rem auto 0;
+			margin: 0.5rem auto 0;
 			max-width: map-get($metrics, 'wrap-inner-max-width');
 			padding: 0 get-size(500);
 		}
 
 		pre[class*='language'] {
 			background-color: var(--color-dark-alt);
-			box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
+			box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
 			margin-left: 50%; /* changing this value to 47% removes the horizontal scrollbar once the viewport is < 930px */
 			position: relative;
-			transform: translateX(-50%); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
+			transform: translateX(
+				-50%
+			); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
 			width: 100vw;
 		}
 
@@ -153,7 +157,7 @@
 
 			h3 {
 				align-items: center;
-				border-bottom: 1px solid rgba(255, 255, 255, .25);
+				border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 				display: flex;
 				font-size: get-size(600);
 				margin-bottom: 10px;
