--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,47 +1,39 @@
 @font-face {
 	font-display: swap;
-	font-family: ministry;
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: 900;
+	src: url('/fonts/nunito/nunito-black.woff2') format('woff2'), url('/fonts/nunito/nunito-black.woff') format('woff');
+}
+
+@font-face {
+	font-display: swap;
+	font-family: nunito;
 	font-style: normal;
 	font-weight: 600;
-	src: url('/fonts/ministry/ministry-xbold.woff2') format('woff2'), url('/fonts/ministry/ministry-xbold.woff') format('woff');
+	src: url('/fonts/nunito/nunito-semibold.woff2') format('woff2'),
+		url('/fonts/nunito/nunito-semibold.woff') format('woff');
 }
 
 @font-face {
 	font-display: swap;
-	font-family: ministry;
-	font-style: normal;
-	font-weight: 500;
-	src: url('/fonts/ministry/ministry-bold.woff2') format('woff2'), url('/fonts/ministry/ministry-bold.woff') format('woff');
-}
-
-@font-face {
-	font-display: swap;
-	font-family: ministry;
+	font-family: nunito;
 	font-style: normal;
 	font-weight: 400;
-	src: url('/fonts/ministry/ministry-med.woff2') format('woff2'), url('/fonts/ministry/ministry-med.woff') format('woff');
-}
-
-@font-face {
-	font-display: swap;
-	font-family: ministry;
-	font-style: normal;
-	font-weight: 300;
-	src: url('/fonts/ministry/ministry-light.woff2') format('woff2'), url('/fonts/ministry/ministry-light.woff') format('woff');
+	src: url('/fonts/nunito/nunito-regular.woff2') format('woff2'),
+		url('/fonts/nunito/nunito-regular.woff') format('woff');
 }
 
 body {
 	@include apply-utility('font', 'base');
-	// Strip the unit off the size ratio to generate a line height
-	$line-height: get-size(600);
 	font-weight: 400;
-	line-height: $line-height / ($line-height * 0 + 1);
+	line-height: 1.6;
 }
 
 h1,
 h2,
 h3 {
-	font-weight: 500;
+	font-weight: 900;
 }
 
 h1 {
