--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -1,32 +1,21 @@
 .site-foot {
-	// Reverse selection colors
-	--color-selection-text: #{get-color('dark')};
-	--color-selection-bg: #{get-color('light')};
-	// Reverse whatever the theme colors are
-	background-color: #1f1a24;
-	border-top: 1px solid rgba(255, 255, 255, .1);
-	color: var(--color-bg);
-
 	// .site-foot__credit
 	&__credit {
-		color: var(--color-light);
 		text-align: center;
 
 		li {
 			display: inline-block;
 			line-height: 1.8;
 
-			&:nth-child(n+2):before {
+			&:nth-child(n + 2):before {
 				color: var(--color-link-text);
 				content: '/';
 				display: inline-block;
-				margin: 0 .4rem;
+				margin: 0 0.4rem;
 			}
 		}
 
 		a {
-			color: currentColor;
-
 			&:hover,
 			&:focus {
 				color: var(--color-link-text);
@@ -42,8 +31,8 @@
 		width: 100%;
 
 		a {
-			opacity: .5;
-			transition: opacity .5s ease;
+			opacity: 0.5;
+			transition: opacity 0.5s ease;
 
 			&:hover,
 			&:focus {
@@ -64,7 +53,7 @@
 		svg {
 			fill: #969697;
 			height: 35px;
-			transition: fill .5s ease;
+			transition: fill 0.5s ease;
 			width: 35px;
 		}
 	}
