style: main navigation active state and changes to hover and focus states

--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,4 +1,4 @@
-<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-600 ]">
+<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-bottom-600 ]">
 	<div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
 		<div>
 			<h1 class="[ intro__heading ] [ leading-tight text-900 md:text-max ] [ p-name ] [ gap-top-900 ]">{{ introHeading }}</h1>
