--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -28,6 +28,18 @@
 		&.active {
 			a {
 				background-size: 50% 3px;
+				position: relative;
+
+				&:after {
+					background-color: var(--color-link-text);
+					content: '';
+					height: 5px;
+					left: 0;
+					position: absolute;
+					top: 103%;
+					transform: rotate(2deg);
+					width: 100%;
+				}
 			}
 		}
 
