--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,9 +1,22 @@
 .intro {
 	color: var(--color-text);
-	margin-bottom: 1.5rem;
+	margin-bottom: 3.5rem;
 	padding-top: 8rem;
 	position: relative;
 	transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
+
+	.wrapper {
+		&:after {
+			background-color: var(--color-link-text);
+			content: '';
+			height: 5px;
+			left: auto;
+			position: absolute;
+			top: 103%;
+			transform: rotate(2deg);
+			width: 85px;
+		}
+	}
 
 	// .intro__heading
 	&__heading {
