--- a/src/_includes/partials/components/article-list.njk
+++ b/src/_includes/partials/components/article-list.njk
@@ -1,6 +1,7 @@
 {% if postListItems.length %}
 <section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
+		<img src="images/post-dots.svg" class="decoration" alt="">
 		<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
 		<p class="section-intro">{{ postListSummary }}</p>
 		<ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
