style: stupid eye changes to blockquotes

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -57,9 +57,10 @@
 				content: '';
 				display: block;
 				height: 100%;
-				left: 0.5rem;
+				left: 0.35rem;
+				opacity: 0.85;
 				position: absolute;
-				top: 0.5rem;
+				top: 0.35rem;
 				width: 100%;
 				z-index: -1;
 			}
