--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -3,7 +3,7 @@
     <div class="[ wrapper ] [ sf-flow ]">
       {% if page.url == '/' %}
         <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Featured Projects</h2>
-        <p class="section-intro">I also build on <a href="https://codepen.io/jim-bateson">Codepen</a> and any source code is available on <a href="https://github.com/jimbateson">Github</a>.</p>
+        <p class="section-intro">I also build on <a href="https://codepen.io/_jamesbateson">Codepen</a> and any source code is available on <a href="https://github.com/jimbateson">Github</a>.</p>
       {% endif %}
       <ol class="[ post-list__items project-list__items ] [ pad-top-500 ]">
         {% for item in projectListItems %}
