--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -13,6 +13,9 @@
 
 <title>{{ pageTitle }}</title>
 
+<meta name="theme-color" content="#265c85" media="(prefers-color-scheme: light)">
+<meta name="theme-color" content="#ffd53d" media="(prefers-color-scheme: dark)">
+
 <meta property="og:site_name" content="{{ siteTitle }}" />
 <meta property="og:title" content="{{ pageTitle }}" />
 <meta property="og:type" content="website" />
