feat: added link to first pass of accessibility statement. Few tweaks probably needed.

--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -29,7 +29,8 @@
 		<li>Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a></li>
 		<li><a href="/styleguide/">Style Guide</a></li>
 		<li><a href="https://james-bateson-speedlify.netlify.app/jamesbateson.co.uk/" target="_blank" rel="noreferrer">Speedlify</a></li>
-		<li><a href="/resume">Résumé</a></li>
+		<li><a href="/resume/">Résumé</a></li>
+		<li><a href="/accessibility-statement/">Accessibility Statement</a></li>
       </ul>
     {% endif %}
   </div>
