--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,27 +1,9 @@
 @font-face {
 	font-display: swap;
-	font-family: Nunito;
+	font-family: red-hat;
 	font-style: normal;
-	font-weight: 900;
-	src: url('/fonts/nunito/nunito-black.woff2') format('woff2'), url('/fonts/nunito/nunito-black.woff') format('woff');
-}
-
-@font-face {
-	font-display: swap;
-	font-family: nunito;
-	font-style: normal;
-	font-weight: 600;
-	src: url('/fonts/nunito/nunito-semibold.woff2') format('woff2'),
-		url('/fonts/nunito/nunito-semibold.woff') format('woff');
-}
-
-@font-face {
-	font-display: swap;
-	font-family: nunito;
-	font-style: normal;
-	font-weight: 400;
-	src: url('/fonts/nunito/nunito-regular.woff2') format('woff2'),
-		url('/fonts/nunito/nunito-regular.woff') format('woff');
+	font-weight: 300 700;
+	src: url('/fonts/red-hat/red-hat-test.woff2') format('woff2');
 }
 
 body {
@@ -33,7 +15,7 @@ body {
 h1,
 h2,
 h3 {
-	font-weight: 900;
+	font-weight: 700;
 }
 
 h1 {
