--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,7 +1,7 @@
 .intro {
 	color: var(--color-text);
 	margin-bottom: 3.5rem;
-	padding-top: 8rem;
+	padding-top: 4rem;
 	position: relative;
 	transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
 
@@ -32,7 +32,7 @@
 		font-weight: 600;
 
 		a {
-			color: currentColor;
+			color: currentcolor;
 
 			&:hover,
 			&:focus {
