--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -4,7 +4,7 @@
 @import '../../node_modules/stalfos/stalfos.scss';
 
 // Mixins
-@import 'mixins/dark-mode';
+// @import 'mixins/dark-mode';
 @import 'theme';
 
 // Local dependencies
