style: post style tweaks

--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,4 +1,4 @@
-<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-bottom-600 ]">
+<header class="[ intro {% if introImage %} intro__flex {% endif %} ]">
 	<div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
 		<div>
 			<h1 class="[ intro__heading ] [ leading-tight ] [ p-name ] [ gap-top-800 gap-bottom-800 ]">{{ introHeading }}</h1>
