--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -4,8 +4,7 @@
 		--flow-space: #{get-size(800)};
 
 		> p:first-of-type:not(.post-note) {
-			font-size: get-size(600);
-			font-weight: 600;
+			font-weight: 500;
 		}
 
 		/**
@@ -31,9 +30,11 @@
 		code,
 		.bg-dark > code {
 			background-color: var(--color-intro-bg);
-			border-radius: 3px;
+			border: 1px solid var(--color-grey-mid);
+			border-radius: 4px;
 			color: var(--color-text);
-			padding: .2rem .5rem;
+			font-size: get-size(400);
+			padding: .15rem .3rem;
 		}
 
 		pre > code {
@@ -42,8 +43,9 @@
 		}
 
 		blockquote {
-			background-color: var(--color-intro-bg);
-			border-radius: 10px;
+			background-color: var(--color-grey-alt);
+			border-left: 4px solid var(--color-accent-alt);
+			border-radius: 4px;
 			color: var(--color-text);
 			font-size: get-size(500);
 			margin-left: 0;
@@ -51,23 +53,8 @@
 			position: relative;
 			width: 100%;
 
-			&:after {
-				background-color: var(--color-link-text);
-				border-radius: 10px;
-				content: '';
-				display: block;
-				height: 100%;
-				left: .35rem;
-				opacity: .85;
-				position: absolute;
-				top: .35rem;
-				width: 100%;
-				z-index: -1;
-			}
-
 			p {
-				opacity: .85;
-				padding: get-size(500) 0;
+				padding: get-size(300) 0;
 			}
 		}
 
@@ -121,16 +108,14 @@
 
 		pre[class*='language'] {
 			background-color: var(--color-dark-alt);
+			border-radius: 6px;
 			box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
-			margin-left: 50%; /* changing this value to 47% removes the horizontal scrollbar once the viewport is < 930px */
 			position: relative;
-			transform: translateX(-50%); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
-			width: 100vw;
 		}
 
 		pre > code {
 			display: block;
-			font-size: get-size(500);
+			font-size: get-size(400);
 			margin: 0 auto;
 			max-width: map-get($metrics, 'wrap-max-width');
 			padding: get-size(700);
@@ -149,18 +134,18 @@
 
 		kbd {
 			font-size: .75em;
-			padding: .0625rem .5rem;
+			padding: .063rem .5rem;
 			border-radius: .125rem;
 			border: 2px solid;
-			box-shadow: 1px 1px 0 currentColor, 2px 2px 0 currentColor;
+			box-shadow: 1px 1px 0 currentcolor, 2px 2px 0 currentcolor;
 		}
 
 		dl {
-			--flow-space: .5rem;
+			--flow-space: 1.1rem;
 
 			dt {
-				color: var(--color-link-text);
-				font-weight: 600;
+				color: var(--color-accent);
+				font-weight: 550;
 			}
 
 			dd + dt {
@@ -171,15 +156,15 @@
 		}
 
 		.post-note {
-			background-color: #195e9b;
-			border-radius: 10px;
+			background-color: var(--color-accent);
+			border-radius: 6px;
 			color: var(--color-light);
 			margin: 0;
 			padding: var(--flow-space);
 
 			&:not(.post-note--update) {
 				a {
-					color: currentColor;
+					color: currentcolor;
 					text-decoration-color: var(--color-accent-alt);
 
 					&:hover,
