--- a/src/styleguide.njk
+++ b/src/styleguide.njk
@@ -70,7 +70,7 @@ permalink: /styleguide/
 		  {% endfor %}
 		</ul>
 		<h2>Fonts</h2>
-		<h3>Nunito</h3>
+		<h3>Red Hat</h3>
 		<p class="sf-flow">
 		  <span aria-hidden="true" role="presentation" class="text-600 md:text-800 box-block leading-tight">The quick brown fox jumps over the lazy fox</span>
 		</p>
