style: added large breakpoint

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -30,7 +30,8 @@ $stalfos-util-prefix: 'sf-';
 $metrics: (
 	'wrap-max-width': 58rem,
 	'wrap-inner-max-width': 52rem,
-	'md-breakpoint': 48rem
+	'md-breakpoint': 48rem,
+	'lg-breakpoint': 68rem,
 );
 
 /**
@@ -161,7 +162,8 @@ $stalfos-config: (
 		'property': 'width'
 	),
 	'breakpoints': (
-		'md': #{'(min-width: ' + map-get($metrics, 'md-breakpoint') + ')'}
+		'md': #{'(min-width: ' + map-get($metrics, 'md-breakpoint') + ')'},
+		'lg': #{'(min-width: ' + map-get($metrics, 'lg-breakpoint') + ')'}
 	),
 	'utilities': (
 		'reset': 'on',
