--- a/src/_includes/layouts/project-single.njk
+++ b/src/_includes/layouts/project-single.njk
@@ -29,9 +29,9 @@
       {% if tags %}
         <footer class="[ post__footer ] [ pad-top-500 pad-bottom-500 ]">
           <div class="inner-wrapper">
-            <div class="[ nav ] [ box-flex align-center ]">
-              <h2 class="font-base text-500">Find similar projects under:</h2>
-              <ul class="[ nav__list nav__list--tags ] [ box-flex align-center pad-left-400 ] [ p-category ]">
+            <div class="[ nav nav--tags ]">
+              <h2 class="font-base text-500 gap-bottom-500">Find similar projects under:</h2>
+              <ul class="[ nav__list nav__list--tags ] [ box-flex align-center ] [ p-category ]">
                 {% for item in tags %}
                   <li class="nav__item nav__item--tag">
                     <a href="/tags/{{ item }}" class="text-400">#{{ item }}</a>
