--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -2,7 +2,7 @@
 	max-width: none;
 
 	+ .project-list__item {
-		border-top: 2px dotted var(--color-link-text);
+		border-top: 2px dotted var(--color-accent-alt);
 		margin-top: var(--flow-space);
 		padding-top: var(--flow-space);
 	}
@@ -11,18 +11,28 @@
 .post-list__item-links {
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 0.5rem;
+	margin-top: .5rem;
 
 	li {
 		+ li {
-			margin-left: 0.3rem;
+			margin-left: .3rem;
 
 			&:before {
-				color: var(--color-link-text);
+				color: var(--color-white);
 				content: '/';
 				display: inline-block;
-				margin-right: 0.3rem;
+				margin-right: .3rem;
 			}
+		}
+	}
+
+	a {
+		color: var(--color-white);
+		text-decoration-color: var(--color-accent-alt);
+
+		&:hover,
+		&:focus {
+			color: var(--color-accent-alt);
 		}
 	}
 }
