--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -1,4 +1,5 @@
 .site-foot {
+	border-top: 1px solid var(--color-grey-med);
 	// .site-foot__credit
 	&__credit {
 		text-align: center;
@@ -46,7 +47,7 @@
 		&:hover,
 		&:focus {
 			svg {
-				fill: var(--color-link-text);
+				fill: var(--color-accent);
 			}
 		}
 
