style: minor colour updates (#793)
* style: WIP UI refresh. Added a new font and removed theme switcher.

* style: post style tweaks

* style: added large breakpoint

* style: colour tweaks for new(ish) palette theme.

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -2,7 +2,7 @@
 	background-color: var(--color-accent-alt);
 	color: var(--color-text);
 	padding-top: 1rem;
-	padding-bottom: 8rem;
+	padding-bottom: 4rem;
 	position: relative;
 	transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
 
@@ -39,7 +39,7 @@
 	&__image {
 		// .intro__image--rounded
 		&--rounded {
-			border: 10px solid var(--color-link-text);
+			border: 10px solid var(--color-accent);
 			border-radius: 50%;
 			display: block;
 			height: 250px;
@@ -74,6 +74,10 @@
 .section-intro {
 	font-size: 1.1rem;
 	margin-top: 0;
+
+	a {
+		color: currentcolor;
+	}
 }
 
 @include media-query('md') {
@@ -116,5 +120,11 @@
 
 	.section-intro {
 		max-width: 65ch;
+	}
+}
+
+@include media-query('lg') {
+	.intro {
+		padding-bottom: 8rem;
 	}
 }
