fix: couple of accessibility warnings for visually hidden link contrast. Do not really understand why they are flagged.

--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -2,6 +2,10 @@
 	background-color: var(--color-accent-alt);
 	position: relative;
 
+	&__site-name {
+		color: var(--color-accent);
+	}
+
 	> svg {
 		left: 0;
 		position: absolute;
