chore: very minor text size change for intro summary text on smaller devices

--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -4,7 +4,7 @@
 			<h1 class="[ intro__heading ] [ leading-tight ] [ p-name ] [ gap-top-800 gap-bottom-800 ]">{{ introHeading }}</h1>
 
 			{% if introSummary %}
-			<div class="[ intro__summary ] [ sf-flow ] [ text-600 leading-tight ]">{{ introSummary | safe }}</div>
+			<div class="[ intro__summary ] [ sf-flow ] [ text-500 md:text-600 leading-tight ]">{{ introSummary | safe }}</div>
 			{% endif %}
 
 			{% if page.url == '/resume/' %}
